# web-dash-builder

./: .gitattributes  .gitignore  .npmignore  Cargo.toml  README.md  index.d.ts  index.js  main.cjs  main.d.ts  package.json  schema.json  t.js
.github/workflows/: CI.yml
__test__/: config.json  index.spec.mjs  index.spec.mjs.md  index.spec.mjs.snap  index.spec.ts
benchmark/: bench.ts
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: builder.rs  config_schema.rs  custom_tags.rs  header.rs  lib.rs  main.rs
src/html/: customTags.html  customTags.jsp  header.html  header.jsp  sankhyaUtil.jsp
tests/: build_test.rs
