
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "web_dash_builder"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
minify-html = "0.16.4"
napi        = "3.0.0"
napi-derive = "3.0.0"
regex       = "1.11.1"
serde       = { version = "1.0.217", features = ["derive"] }
serde_json  = "1.0.137"
walkdir     = "2.4"
zip         = "4.3.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
